PLANET-2434 - Fix aligncenter for images in posts and pages

--- a/assets/scss/pages/_page.scss
+++ b/assets/scss/pages/_page.scss
@@ -40,6 +40,7 @@ div.page-template {
 
   .aligncenter {
     margin: auto;
+    display: block;
   }
 
   .alignnone,
